--- a/publicaciones.html
+++ b/publicaciones.html
@@ -10,7 +10,6 @@
    <header>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-    <link href="assets/css/academicons.css" rel="stylesheet">
     <nav class="navbar navbar-expand-lg navbar-light bg-light" style="font-weight: bold">
         <div class="container-fluid">
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbar-content" aria-controls="navbar-content" aria-expanded="false" aria-label="Toggle navigation">
@@ -38,11 +37,11 @@
         </div>
     </nav>
 </header>
+    <p>Todas las publicaciones que se listan a continuación se citan en formato APA. Al final de cada referencia, se puede descargar el documento en cuestión.</p>
     <section id="publications" class="home-section wg-publications">
     <div class="container">
         <div class="row g-10">
-            <div class="col-12 col-lg-2">
-                <p>Todas las publicaciones que se listan a continuación se citan en formato APA. Al final de cada referencia, se puede descargar el documento en cuestión.</p>
+            <div class="col-12 col-lg-2">   
                 <div id="scientific publications">
                     <h1>Publicaciones científicas</h1>
                 </div>
@@ -51,7 +50,7 @@
                 <main style="margin: 1rem 2rem; text-align: justify">
                    <h2>En revistas académicas</h2>
                     <ul>
-                        <li>Just Alcaraz, J. (2023). The long-term average spectrum in forensic phonetics: From collation to discrimination of speakers. <em>Journal of Experimental Phonetics</em>, <em>32</em>, 87-110. <a href="papers/just-alcaraz-2023.pdf" target="_blank">Descarga aquí</a><a href="https://doi.org/10.1344/efe-2023-32-87-110" target="_blank"><i class="ai ai-doi ai-lg"></i></a><a href="https://revistes.ub.edu/index.php/experimentalphonetics/article/view/44481/40851" target="_blank"><i class="ai ai-open-access ai-lg"></i></a></li>
+                        <li>Just Alcaraz, J. (2023). The long-term average spectrum in forensic phonetics: From collation to discrimination of speakers. <em>Journal of Experimental Phonetics</em>, <em>32</em>, 87-110. <a href="papers/just-alcaraz-2023.pdf" target="_blank">Descarga aquí</a><a href="https://doi.org/10.1344/efe-2023-32-87-110" target="_blank"><i href="assets/css/academicons.css" rel="stylesheet" class="ai ai-doi ai-lg"></i></a><a href="https://revistes.ub.edu/index.php/experimentalphonetics/article/view/44481/40851" target="_blank"><i href="assets/css/academicons.css" rel="stylesheet" class="ai ai-open-access ai-lg"></i></a></li>
                     </ul>
                 </main>
             </div>
@@ -68,7 +67,7 @@
                 <main style="margin: 1rem 2rem; text-align: justify">
                    <h2>En revistas académicas</h2>
                     <ul>
-                        <li>Just Alcaraz, J. (2023). Ni siquiera una conjunción, incluso más que un adverbio. <em>Pancronía. Revista estudiantil de divulgación científica</em>, <em>1</em>, 38-45. <a href="divulg/just-alcaraz-2023.pdf" target="_blank">Descarga aquí</a></a><a href="https://drive.google.com/file/d/1PyuLSCC68sPZgXqM836v87o7u3fUHfFU/view" target="_blank"><i class="ai ai-open-access ai-lg"></i></a></li>
+                        <li>Just Alcaraz, J. (2023). Ni siquiera una conjunción, incluso más que un adverbio. <em>Pancronía. Revista estudiantil de divulgación científica</em>, <em>1</em>, 38-45. <a href="divulg/just-alcaraz-2023.pdf" target="_blank">Descarga aquí</a></a><a href="https://drive.google.com/file/d/1PyuLSCC68sPZgXqM836v87o7u3fUHfFU/view" target="_blank"><i href="assets/css/academicons.css" rel="stylesheet" class="ai ai-open-access ai-lg"></i></a></li>
                     </ul>
                 </main>
             </div>
