--- a/publicaciones.html
+++ b/publicaciones.html
@@ -39,9 +39,9 @@
     </nav>
 </header>
     <section id="publications" class="home-section wg-publications">
-        <p>Todas las publicaciones que se listan a continuación se citan en formato APA. Al final de cada referencia, se puede descargar el documento en cuestión.</p>
+    <p style="text-align: center">Todas las publicaciones que se listan a continuación se citan en formato APA. Al final de cada referencia, se puede descargar el documento en cuestión.</p>
     <div class="container">
-        <div class="row">
+        <div class="row g-5">
             <div class="col-12 col-lg-2">   
                 <div id="scientific publications">
                     <h1>Publicaciones científicas</h1>
@@ -51,14 +51,14 @@
                 <main style="margin: 1rem 2rem; text-align: justify">
                    <h2>En revistas académicas</h2>
                     <ul>
-                        <li>Just Alcaraz, J. (2023). The long-term average spectrum in forensic phonetics: From collation to discrimination of speakers. <em>Journal of Experimental Phonetics</em>, <em>32</em>, 87-110. <a href="papers/just-alcaraz-2023.pdf" target="_blank">Descarga aquí</a><a href="https://doi.org/10.1344/efe-2023-32-87-110" target="_blank"><i class="ai ai-doi ai-lg"></i></a><a href="https://revistes.ub.edu/index.php/experimentalphonetics/article/view/44481/40851" target="_blank"><i class="ai ai-open-access ai-lg"></i></a></li>
+                        <li>Just Alcaraz, J. (2023). The long-term average spectrum in forensic phonetics: From collation to discrimination of speakers. <em>Journal of Experimental Phonetics</em>, <em>32</em>, 87-110. <a href="papers/just-alcaraz-2023.pdf" target="_blank">Descarga aquí</a> <a href="https://doi.org/10.1344/efe-2023-32-87-110" target="_blank"><i class="ai ai-doi ai-lg"></i></a><a href="https://revistes.ub.edu/index.php/experimentalphonetics/article/view/44481/40851" target="_blank"><i class="ai ai-open-access ai-lg"></i></a></li>
                     </ul>
                 </main>
             </div>
         </div>
     </div>
     <div class="container">
-        <div class="row g-0">
+        <div class="row g-5">
             <div class="col-12 col-lg-2">
                 <div id="scientific publications">
                     <h1>Divulgación científica</h1>
