--- a/publicaciones.html
+++ b/publicaciones.html
@@ -10,7 +10,7 @@
    <header>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-    <link rel="stylesheet" <link rel="stylesheet" href="/assets/css/academicons.min.css"/>
+    <link rel="stylesheet" <link rel="stylesheet" href="/assets/css/academicons.min.css">
     <nav class="navbar navbar-expand-lg navbar-light bg-light" style="font-weight: bold">
         <div class="container-fluid">
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbar-content" aria-controls="navbar-content" aria-expanded="false" aria-label="Toggle navigation">
@@ -42,7 +42,7 @@
     <p style="text-align: center; margin: 1rem 2rem">Todas las publicaciones que se listan a continuación se citan en formato APA. Al final de cada referencia, se puede descargar el documento en cuestión.</p>
     <div class="container">
         <div class="row g-50">
-            <div class="col-12 col-lg-2">   
+            <div class="col-12 col-lg-2" style="margin-right: 30px;">   
                 <div id="scientific publications">
                     <h1>Publicaciones científicas</h1>
                 </div>
@@ -59,7 +59,7 @@
     </div>
     <div class="container">
         <div class="row g-50">
-            <div class="col-12 col-lg-2">
+            <div class="col-12 col-lg-2" style="margin-right: 30px;">
                 <div id="scientific publications">
                     <h1>Divulgación científica</h1>
                 </div>
