--- a/publicaciones.html
+++ b/publicaciones.html
@@ -66,7 +66,7 @@
             </div>
             <div class="col-12 col-lg-8">
                 <main style="margin: 1rem 2rem; text-align: justify">
-                   <h2>En revistas académicas</h2>
+                   <h2>En revistas</h2>
                     <ul>
                         <li>Just Alcaraz, J. (2023). Ni siquiera una conjunción, incluso más que un adverbio. <em>Pancronía. Revista estudiantil de divulgación científica</em>, <em>1</em>, 38-45. <a href="divulg/just-alcaraz-2023.pdf" target="_blank">Descarga aquí</a></a><a href="https://drive.google.com/file/d/1PyuLSCC68sPZgXqM836v87o7u3fUHfFU/view" target="_blank"><i class="ai ai-open-access ai-lg"></i></a></li>
                     </ul>
