--- a/index.html
+++ b/index.html
@@ -136,6 +136,31 @@
                             </a>
                         </li>
                     </ul>
+                    <div class="academic">
+                        <h3>Puedes seguirme también en:</h3>
+                    </div>
+                    <ul class="network-icon" aria-hidden="true">
+                        <li>
+                            <a href="https://orcid.org/0000-0002-7003-5466" target="_blank" rel="noopener">
+                                <i class="ai ai-orcid-square ai"></i>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="https://www.researchgate.net/profile/Jordi-Just-Alcaraz" target="_blank" rel="noopener">
+                                <i class="ai ai-researchgate-square ai"></i>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="https://scholar.google.com/citations?user=fk0ngtIAAAAJ&hl=es" target="_blank" rel="noopener">
+                                <i class="ai ai-google-scholar-square ai"></i>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="https://usal.academia.edu/JordiJustAlcaraz" target="_blank" rel="noopener">
+                                <i class="ai ai-academia-square ai"></i>
+                            </a>
+                        </li>
+                    </ul>
                 </div>
             </div>
             <div class="col-12 col-lg-8">
